--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,54 @@
 .App {
   text-align: center;
+  width: 300px;
+  height: 600px;
 }
 
+.categories {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-left: 15px;
+}
+
+.categories, label {
+  font-size: 14px;
+}
+#category {
+  width:70%;
+}
+
+#form {
+  display: flex;
+  /* justify-content: space-evenly; */
+  width: 100%;
+  
+  align-items: center;
+}
+
+#form .numbers {
+  display: flex;
+  flex-direction: column;
+  margin-left: 15px;
+}
+
+#form button {
+  width: 120px;
+  height: 40px;
+  margin-left: 5px;
+}
+
+#numInput {
+  width: 50px;
+}
 .link {
   color: blue; 
   text-decoration: underline; 
   cursor: pointer;
+  text-align: left;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-decoration: bold;
 }
